--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -1,1 +1,17 @@
-PHP_VERSION=8.1
+PHP_VERSION=8.2
+
+REMOTE_USER=vscode
+USER_UID=1000
+USER_GID=1000
+
+XDEBUG_REMOTE_ENABLE=1
+XDEBUG_REMOTE_AUTOSTART=1
+XDEBUG_REMOTE_CONNECT_BACK=0
+XDEBUG_REMOTE_HOST=localhost
+XDEBUG_REMOTE_PORT=9001
+XDEBUG_REMOTE_LOG=
+
+MYSQL_ROOT_PASSWORD=docker
+MYSQL_USER=docker
+MYSQL_PASSWORD=docker
+MYSQL_DATABASE=docker
